增加悔棋、重新开始功能、布局调整

--- a/app/css/modules/fir.css
+++ b/app/css/modules/fir.css
@@ -1,7 +1,15 @@
 .fir {
 	width: 100%;
 	height: 100%;
-	position: relative;
+}
+
+.fir__body{
+	margin: 10% 0;
+	float: left;
+}
+
+.fir__side{
+	float: left;
 }
 
 .fir__row,
